Added swagger docs, initial, to the setQOD and getQOD routes
